# duckle

./: .env.example  .gitignore  AGENTS.md  GETTING_STARTED.md  MILESTONE.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
scripts/: example_csv.py  example_postgres.py  test_csv.py  test_postgres.py
seed/init/: 01_schema.sql  02_seed_data.sql
src/: running_script.py  test_script.py
src/api/: main.py
src/connectors/: api_connector.py  base.py  csv_connector.py  postgres_connector.py  table_connector.py
src/engine/: transformer.py
src/orchestrator/: runner.py  scheduler.py
src/quality/: checker.py
src/storage/: ducklake.py
src/utils/: sql_safety.py
tests/: conftest.py  test_connectors.py  test_ducklake.py  test_e2e_csv.py  test_e2e_postgres.py  test_quality.py  test_runner.py  test_sql_safety.py  test_transformer.py
