[project]
name = "duckle"
version = "0.1.0"
description = "A lightweight ETL platform powered by DuckDB + DuckLake"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "schedule>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
